--- a/index.html
+++ b/index.html
@@ -1063,9 +1063,9 @@
   <div class="container col-12 shirt-md border rounded my-3   ">
 
     <div class="d-flex  justify-content-between align-items-center border-bottom border-3 px-2" style="margin-bottom: 0;">
-      <h5 style="margin-bottom: 0;" class="text-danger">NEW PRODUCTS DEALS</h3><p style="margin-bottom: 0;"><button class="btn btn-light fs-4 " data-bs-target="#Watches" data-bs-slide="prev">&lt;</button><button class="btn btn-light ml-5 fs-4" data-bs-target="#Watches" data-bs-slide="next">&gt;</button></p>
+      <h5 style="margin-bottom: 0;" class="text-danger">NEW PRODUCTS DEALS</h3><p style="margin-bottom: 0;"><button class="btn btn-light fs-4 " data-bs-target="#Watches-md" data-bs-slide="prev">&lt;</button><button class="btn btn-light ml-5 fs-4" data-bs-target="#Watches-md" data-bs-slide="next">&gt;</button></p>
     </div>
-  <div id="Watches" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+  <div id="Watches-md" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
     <div class="carousel-inner">
       <div class="carousel-item active ">
         <div class="d-flex justify-content-between ">
